添加HanLP分词、引入ReentrantLock读写锁、用chunkId作为构建的唯一索引、三级混合检索降级策略